--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,203 +1,1 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-:root {
-  --gray-h: 0;
-  --gray-s: 0%;
-  --gray-l: 61%;
-  --color-gray: hsl(var(--gray-h), var(--gray-s), var(--gray-l));
-  --color-text-gray: var(--color-gray);
-  --color-bg-gray: hsl( var(--gray-h), var(--gray-s), 14.5% );
-  --color-bg-gray-light: hsl( var(--gray-h), var(--gray-s), 14.5% );
-  --color-pill-gray: hsl( var(--gray-h), var(--gray-s), 35% );
-  --color-pill-text-gray: hsl( var(--gray-h), var(--gray-s), calc(var(--gray-l) + 26%) );
-  --brown-h: 18;
-  --brown-s: 35%;
-  --brown-l: 58%;
-  --color-brown: hsl(var(--brown-h), var(--brown-s), var(--brown-l));
-  --color-text-brown: var(--color-brown);
-  --color-bg-brown: hsl( var(--brown-h), calc(var(--brown-s) - 7%), 22% );
-  --color-bg-brown-light: hsl( calc(var(--brown-h) - 2), calc(var(--brown-s) - 22%), 16% );
-  --color-pill-brown: hsl( var(--brown-h), calc(var(--brown-s) + 2%), 27% );
-  --color-pill-text-brown: hsl( var(--brown-h), calc(var(--brown-s) - 21%), calc(var(--brown-l) + 33%) );
-  --orange-h: 25;
-  --orange-s: 54%;
-  --orange-l: 53%;
-  --color-orange: hsl(var(--orange-h), var(--orange-s), var(--orange-l));
-  --color-text-orange: var(--color-orange);
-  --color-bg-orange: hsl( var(--orange-h), calc(var(--orange-s) - 10%), 25% );
-  --color-bg-orange-light: hsl( var(--orange-h), calc(var(--orange-s) - 30%), 17% );
-  --color-pill-orange: hsl( var(--orange-h), calc(var(--orange-s) + 9%), 32% );
-  --color-pill-text-orange: hsl( var(--orange-h), calc(var(--orange-s) - 23%), calc(var(--orange-l) + 33%) );
-  --yellow-h: 38;
-  --yellow-s: 54%;
-  --yellow-l: 54%;
-  --color-yellow: hsl(var(--yellow-h), var(--yellow-s), var(--yellow-l));
-  --color-text-yellow: var(--color-yellow);
-  --color-bg-yellow: hsl( var(--yellow-h), calc(var(--yellow-s) - 18%), 25% );
-  --color-bg-yellow-light: hsl( var(--yellow-h), calc(var(--yellow-s) - 24%), 17% );
-  --color-pill-yellow: hsl( calc(var(--yellow-h) - 1), calc(var(--yellow-s) + 2%), 35% );
-  --color-pill-text-yellow: hsl( var(--yellow-h), calc(var(--yellow-s) - 28%), calc(var(--yellow-l) + 33%) );
-  --green-h: 146;
-  --green-s: 32%;
-  --green-l: 47%;
-  --color-green: hsl(var(--green-h), var(--green-s), var(--green-l));
-  --color-text-green: var(--color-green);
-  --color-bg-green: hsl( calc(var(--green-h) + 3), calc(var(--green-s) - 6%), 19% );
-  --color-bg-green-light: hsl( var(--green-h), calc(var(--green-s) - 20%), 15% );
-  --color-pill-green: hsl( calc(var(--green-h) + 1), calc(var(--green-s) + 3%), 26% );
-  --color-pill-text-green: hsl( var(--green-h), calc(var(--green-s) - 20%), calc(var(--green-l) + 38%) );
-  --blue-h: 217;
-  --blue-s: 50%;
-  --blue-l: 58%;
-  --color-blue: hsl(var(--blue-h), var(--blue-s), var(--blue-l));
-  --color-text-blue: var(--color-blue);
-  --color-bg-blue: hsl( calc(var(--blue-h) - 16), calc(var(--blue-s) + 9%), 19% );
-  --color-bg-blue-light: hsl( calc(var(--blue-h) + 16), calc(var(--blue-s) - 27%), 15% );
-  --color-pill-blue: hsl( calc(var(--blue-h) - 3), calc(var(--blue-s) - 6%), 29% );
-  --color-pill-text-blue: hsl( calc(var(--blue-h) - 5), calc(var(--blue-s) - 32%), calc(var(--blue-l) + 28%) );
-  --purple-h: 270;
-  --purple-s: 55%;
-  --purple-l: 62%;
-  --color-purple: hsl(var(--purple-h), var(--purple-s), var(--purple-l));
-  --color-text-purple: var(--color-purple);
-  --color-bg-purple: hsl( calc(var(--purple-h) + 2), calc(var(--purple-s) - 31%), 23% );
-  --color-bg-purple-light: hsl( calc(var(--purple-h) + 5), calc(var(--purple-s) - 40%), 17% );
-  --color-pill-purple: hsl( var(--purple-h), calc(var(--purple-s) - 19%), 29% );
-  --color-pill-text-purple: hsl( calc(var(--purple-h) - 3), calc(var(--purple-s) - 40%), calc(var(--purple-l) + 24%) );
-  --pink-h: 329;
-  --pink-s: 57%;
-  --pink-l: 58%;
-  --color-pink: hsl(var(--pink-h), var(--pink-s), var(--pink-l));
-  --color-text-pink: var(--color-pink);
-  --color-bg-pink: hsl( calc(var(--pink-h) + 3), calc(var(--pink-s) - 29%), 24% );
-  --color-bg-pink-light: hsl( calc(var(--pink-h) + 5), calc(var(--pink-s) - 40%), 16% );
-  --color-pill-pink: hsl( calc(var(--pink-h) - 2), calc(var(--pink-s) - 21%), 30% );
-  --color-pill-text-pink: hsl( calc(var(--pink-h) + 4), calc(var(--pink-s) - 41%), calc(var(--pink-l) + 28%) );
-  --red-h: 1;
-  --red-s: 69%;
-  --red-l: 60%;
-  --color-red: hsl(var(--red-h), var(--red-s), var(--red-l));
-  --color-text-red: var(--color-red);
-  --color-bg-red: hsl( calc(var(--red-h) + 5), calc(var(--red-s) - 37%), 24% );
-  --color-bg-red-light: hsl( calc(var(--red-h) + 5), calc(var(--red-s) - 56%), 17% );
-  --color-pill-red: hsl( calc(var(--red-h) + 5), calc(var(--red-s) - 30%), 31% );
-  --color-pill-text-red: hsl( calc(var(--red-h) + 7), calc(var(--red-s) - 50%), calc(var(--red-l) + 24%) );
-  --default-h: 45;
-  --default-s: 8%;
-  --default-l: 20%;
-  --color-default: hsl( var(--default-h), var(--default-s), var(--default-l) );
-  --color-pill-default: hsl( var(--default-h), var(--default-s), -19% );
-  --color-pill-text-default: hsl( var(--default-h), var(--default-s), calc(var(--default-l) + 23%) );
-  --color-text-default: #e1e1e1;
-  --color-text-default-light: #9b9b9b;
-  --color-bg-default: #2f3437;
-  --color-border-default: #373737;
-  --color-border-dark: var(--color-border-default);
-  --color-ui-hover-bg: #262626;
-  --color-card-bg: #2f3437;
-  --color-card-bg-hover: #2f2f2f;
-  --color-calendar-weekend-bg: #202020;
-  --color-checkbox-bg: #2EAADC;
-  --color-code-bg: #474c50;
-  --scrollbar-background-color: #FAFAFA;
-  --scrollbar-thumb-color: #C1C1C1;
-  --scrollbar-border-color: #E8E8E8;
-  --navbar-text-color: #e1e1e1;
-  --navbar-list-item-hover: rgba(255,255,255,.2);
-  --navbar-background-color: #2f3437;
-  --navbar-background-color-dark: #202528;
-  --navbar-button-text-color: #191919;
-  --navbar-button-background-color: #e1e1e1;
-  --navbar-menu-background-color: var(--navbar-background-color);
-  --footer-text-color: #e1e1e1;
-  --footer-background-color: #191919;
-}
-body {
-  background-color: var(--color-bg-default);
-}
-
-.color-default {
-  color: var(--color-text-default)
-}
-
-.color-gray {
-  color: var(--color-text-gray)
-}
-
-.color-brown {
-  color: var(--color-text-brown)
-}
-
-.color-orange {
-  color: var(--color-text-orange)
-}
-
-.color-yellow {
-  color: var(--color-text-yellow)
-}
-
-.color-green {
-  color: var(--color-text-green)
-}
-
-.color-blue {
-  color: var(--color-text-blue)
-}
-
-.color-purple {
-  color: var(--color-text-purple)
-}
-
-.color-pink {
-  color: var(--color-text-pink)
-}
-
-.color-red {
-  color: var(--color-text-red)
-}
-
-.bg-default {
-  background-color: var(--color-bg-default)
-}
-
-.bg-accent {
-  background-color: var(--color-bg-accent)
-}
-
-.bg-gray {
-  background-color: var(--color-bg-gray)
-}
-
-.bg-brown {
-  background-color: var(--color-bg-brown)
-}
-
-.bg-orange {
-  background-color: var(--color-bg-orange)
-}
-
-.bg-yellow {
-  background-color: var(--color-bg-yellow)
-}
-
-.bg-green {
-  background-color: var(--color-bg-green)
-}
-
-.bg-blue {
-  background-color: var(--color-bg-blue)
-}
-
-.bg-purple {
-  background-color: var(--color-bg-purple)
-}
-
-.bg-pink {
-  background-color: var(--color-bg-pink)
-}
-
-.bg-red {
-  background-color: var(--color-bg-red)
-}
+@import 'node_modules/modern-normalize/modern-normalize.css';
