--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,1 +1,102 @@
 @import 'node_modules/modern-normalize/modern-normalize.css';
+
+:root {
+
+  --color_default: rgba(255, 255, 255, 0.9);
+  --color_gray: rgba(151, 154, 155, 0.95);
+  --color_brown: #937264;
+  --color_orange: #FFA344;
+  --color_yellow: #FFDC49;
+  --color_green: #4DAB9A;
+  --color_blue: #529CCA;
+  --color_purple: #9A6DD7;
+  --color_pink: #E255A1;
+  --color_red: #FF7369;
+  --color_default_background: #2F3437;
+  --color_gray_background: #454B4E;
+  --color_brown_background: #434040;
+  --color_orange_background: #594A3A;
+  --color_yellow_background: #59563B;
+  --color_green_background: #354C4B;
+  --color_blue_background: #364954;
+  --color_purple_background: #443F57;
+  --color_pink_background: #533B4C;
+  --color_red_background: #594141;
+}
+
+body {
+  color: var(--color_default);
+  background-color: var(--color_default_background);
+  line-height: 1.75;
+}
+
+.notion_link {
+  color: inherit;
+  opacity: .7;
+  transition: border-color .1s ease-in, opacity .1s ease-in;
+}
+
+.notion_link:hover {
+  opacity: unset;
+}
+
+.color_default {
+  color: var(--color_default);
+}
+.color_gray {
+  color: var(--color_gray);
+}
+.color_brown {
+  color: var(--color_brown);
+}
+.color_orange {
+  color: var(--color_orange);
+}
+.color_yellow {
+  color: var(--color_yellow);
+}
+.color_green {
+  color: var(--color_green);
+}
+.color_blue {
+  color: var(--color_blue);
+}
+.color_purple {
+  color: var(--color_purple);
+}
+.color_pink {
+  color: var(--color_pink);
+}
+.color_red {
+  color: var(--color_red);
+}
+.color_default_background {
+  background-color: var(--color_default_background);
+}
+.color_gray_background {
+  background-color: var(--color_gray_background);
+}
+.color_brown_background {
+  background-color: var(--color_brown_background);
+}
+.color_orange_background {
+  background-color: var(--color_orange_background);
+}
+.color_yellow_background {
+  background-color: var(--color_yellow_background);
+}
+.color_green_background {
+  background-color: var(--color_green_background);
+}
+.color_blue_background {
+  background-color: var(--color_blue_background);
+}
+.color_purple_background {
+  background-color: var(--color_purple_background);
+}
+.color_pink_background {
+  background-color: var(--color_pink_background);
+}
+.color_red_background {
+  background-color: var(--color_red_background);
+}
