--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -30,6 +30,86 @@ body {
   line-height: 1.75;
 }
 
+.color_default {
+  color: var(--color_default);
+}
+
+.color_gray {
+  color: var(--color_gray);
+}
+
+.color_brown {
+  color: var(--color_brown);
+}
+
+.color_orange {
+  color: var(--color_orange);
+}
+
+.color_yellow {
+  color: var(--color_yellow);
+}
+
+.color_green {
+  color: var(--color_green);
+}
+
+.color_blue {
+  color: var(--color_blue);
+}
+
+.color_purple {
+  color: var(--color_purple);
+}
+
+.color_pink {
+  color: var(--color_pink);
+}
+
+.color_red {
+  color: var(--color_red);
+}
+
+.color_default_background {
+  background-color: var(--color_default_background);
+}
+
+.color_gray_background {
+  background-color: var(--color_gray_background);
+}
+
+.color_brown_background {
+  background-color: var(--color_brown_background);
+}
+
+.color_orange_background {
+  background-color: var(--color_orange_background);
+}
+
+.color_yellow_background {
+  background-color: var(--color_yellow_background);
+}
+
+.color_green_background {
+  background-color: var(--color_green_background);
+}
+
+.color_blue_background {
+  background-color: var(--color_blue_background);
+}
+
+.color_purple_background {
+  background-color: var(--color_purple_background);
+}
+
+.color_pink_background {
+  background-color: var(--color_pink_background);
+}
+
+.color_red_background {
+  background-color: var(--color_red_background);
+}
+
 .notion_link {
   color: inherit;
   opacity: .7;
@@ -40,63 +120,8 @@ body {
   opacity: unset;
 }
 
-.color_default {
-  color: var(--color_default);
-}
-.color_gray {
-  color: var(--color_gray);
-}
-.color_brown {
-  color: var(--color_brown);
-}
-.color_orange {
-  color: var(--color_orange);
-}
-.color_yellow {
-  color: var(--color_yellow);
-}
-.color_green {
-  color: var(--color_green);
-}
-.color_blue {
-  color: var(--color_blue);
-}
-.color_purple {
-  color: var(--color_purple);
-}
-.color_pink {
-  color: var(--color_pink);
-}
-.color_red {
-  color: var(--color_red);
-}
-.color_default_background {
-  background-color: var(--color_default_background);
-}
-.color_gray_background {
-  background-color: var(--color_gray_background);
-}
-.color_brown_background {
-  background-color: var(--color_brown_background);
-}
-.color_orange_background {
-  background-color: var(--color_orange_background);
-}
-.color_yellow_background {
-  background-color: var(--color_yellow_background);
-}
-.color_green_background {
-  background-color: var(--color_green_background);
-}
-.color_blue_background {
-  background-color: var(--color_blue_background);
-}
-.color_purple_background {
-  background-color: var(--color_purple_background);
-}
-.color_pink_background {
-  background-color: var(--color_pink_background);
-}
-.color_red_background {
-  background-color: var(--color_red_background);
+summary>h1,
+summary>h2,
+summary>h3 {
+  display: inline-block;
 }
