--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -2,4 +2,27 @@
   --page_cover_height: 30vh;
   --page_cover_image_object-fit: cover;
   --page-title-size: 2.5rem;
+
+  --heading-size: 1rem;
+  --heading-weight: 600;
+  --heading1-size: calc(var(--heading-size) * 1.875);
+  --heading2-size: calc(var(--heading-size) * 1.5);
+  --heading3-size: calc(var(--heading-size) * 1.25);
+  --heading4-size: calc(var(--heading-size) * 1);
+  --heading5-size: calc(var(--heading-size) * 0.8125);
+
+  --ratio: 1.5;
+  --s-6: calc(var(--s-5) / var(--ratio));
+  --s-5: calc(var(--s-4) / var(--ratio));
+  --s-4: calc(var(--s-3) / var(--ratio));
+  --s-3: calc(var(--s-2) / var(--ratio));
+  --s-2: calc(var(--s-1) / var(--ratio));
+  --s-1: calc(var(--s0) / var(--ratio));
+  --s0: 1rem;
+  --s1: calc(var(--s0) * var(--ratio));
+  --s2: calc(var(--s1) * var(--ratio));
+  --s3: calc(var(--s2) * var(--ratio));
+  --s4: calc(var(--s3) * var(--ratio));
+  --s5: calc(var(--s4) * var(--ratio));
+  --s6: calc(var(--s5) * var(--ratio));
 }
