--- a/src/styles/notion/block.css
+++ b/src/styles/notion/block.css
@@ -1,6 +1,6 @@
 :root {
   --indent-size: 1.5em;
-
+  --color-checkbox-bg: #364954;
   --border-thickness-layout: 1px;
   --quote-border: calc(var(--border-thickness-layout) + 2px) solid currentcolor;
 }
@@ -40,17 +40,60 @@
   padding-inline-start: var(--indent-size);
 }
 
+.notion_to_do {
+}
+.notion_to_do__content {
+  display: flex;
+  padding: 0.25em 0;
+  margin: 0.25em 0;
+  line-height: 1.5;
+}
+.notion_to_do__icon {
+  display: flex;
+  width: 1.5em;
+  height: 1.5em;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+}
+.notion_checkbox {
+  display: flex;
+  align-items: center;
+}
+.notion_checkbox > svg {
+  width: 1rem;
+  height: 1rem;
+  fill: inherit;
+}
+.notion_checkbox.checked {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 1rem;
+  height: 1rem;
+  background: var(--color-checkbox-bg);
+}
+.notion_checkbox.checked > svg {
+  width: 0.75em;
+  height: 0.75em;
+  fill: #fff;
+}
+.notion_to_do__children {
+  margin-inline-start: var(--indent-size);
+}
+
 .notion_quote {
   font-size: 1.25em;
   border-inline-start: var(--quote-border);
-  padding: var(--s-6) var(--s0)
+  padding: var(--s-6) var(--s0);
 }
 
 .notion_inline_code {
   color: var(--color_inline_code);
 }
 
-.notion_toggle {}
+.notion_toggle {
+}
 .notion_toggle__summary {
   cursor: pointer;
 }
