feat: create ToDo and BulletedListItem Component

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,6 +25,13 @@
   summary > h3 {
     display: inline-block;
   }
+  ol,
+  ul,
+  menu {
+    list-style: revert;
+    /* margin: revert; */
+    /* padding: revert; */
+  }
 }
 
 @layer components {
