--- a/src/styles/notion/page.css
+++ b/src/styles/notion/page.css
@@ -1,3 +1,9 @@
+:root {
+  --page_cover_height: 30vh;
+  --page_cover_image_object-fit: cover;
+  --page-title-size: 2.5rem;
+}
+
 .notion_page_cover {
   position: relative;
   display: flex;
