--- a/src/styles/notion/block.css
+++ b/src/styles/notion/block.css
@@ -17,6 +17,7 @@
   color: inherit;
   opacity: 0.7;
   transition: border-color 0.1s ease-in, opacity 0.1s ease-in;
+  text-decoration-line: underline;
 }
 
 .notion_link:hover {
