--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,16 +1,4 @@
 :root {
-  --page_cover_height: 30vh;
-  --page_cover_image_object-fit: cover;
-  --page-title-size: 2.5rem;
-
-  --heading-size: 1rem;
-  --heading-weight: 600;
-  --heading1-size: calc(var(--heading-size) * 1.875);
-  --heading2-size: calc(var(--heading-size) * 1.5);
-  --heading3-size: calc(var(--heading-size) * 1.25);
-  --heading4-size: calc(var(--heading-size) * 1);
-  --heading5-size: calc(var(--heading-size) * 0.8125);
-
   --ratio: 1.5;
   --s-6: calc(var(--s-5) / var(--ratio));
   --s-5: calc(var(--s-4) / var(--ratio));
@@ -25,4 +13,15 @@
   --s4: calc(var(--s3) * var(--ratio));
   --s5: calc(var(--s4) * var(--ratio));
   --s6: calc(var(--s5) * var(--ratio));
+
+  --font-sans: "Helvetica Neue", "Helvetica", "Hiragino Sans", "Hiragino Kaku Gothic ProN", "Arial", "Yu Gothic", "Meiryo", sans-serif;
+  --font-serif: "Times New Roman", "YuMincho", "Hiragino Mincho ProN", "Yu Mincho", "MS PMincho", serif;
+
+  --heading-size: var(--s0);
+  --heading1-size: calc(var(--heading-size) * 1.875);
+  --heading2-size: calc(var(--heading-size) * 1.5);
+  --heading3-size: calc(var(--heading-size) * 1.25);
+  --heading4-size: calc(var(--heading-size) * 1);
+  --heading5-size: calc(var(--heading-size) * 0.8125);
+  --heading-weight: 600;
 }
