feat: ページ内リンクでヘッダーが隠れない用にscroll-padding-topを設定した

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,6 +8,9 @@
 @tailwind utilities;
 
 @layer base {
+  html {
+    @apply scroll-pt-16;
+  }
   body {
     color: var(--color_default);
     background-color: var(--color_default_background);
