chore: ナビバーの高さをCSS変数化した

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,7 +9,7 @@
 
 @layer base {
   html {
-    @apply scroll-pt-16;
+    scroll-padding-top: var(--navbar-height);
   }
   body {
     color: var(--color_default);
