--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -22,7 +22,7 @@
   --color_red_background: #594141;
 
   --color_inline_code: #EB5757;
-  --color-border-default: var(--color-gray, #454b4e);
+  --color_border_default: var(--color-gray, #454b4e);
 }
 
 .color_default {
