--- a/src/styles/notion/block.css
+++ b/src/styles/notion/block.css
@@ -173,7 +173,7 @@
   margin-bottom: 4px;
   border: 1px solid var(--color_border_default);
   overflow: hidden;
-  padding: var(--callout-padding, var(--s0));
+  padding: var(--callout_padding, var(--s0));
   border-radius: var(--callout-border-radii, 3px);
   box-shadow: var(--callout-shadow, none);
 }
@@ -194,4 +194,58 @@
   max-width: 100%;
   object-fit: contain;
   border-radius: var(--s-6, 1px);
+}
+
+.notion_bookmark {
+  border: 1px solid var(--color_border_default);
+  border-radius: var(--s-3, 3px);
+}
+.notion_bookmark > a {
+  display: flex;
+}
+.notion_bookmark__content {
+  flex: 4 1 180px;
+  overflow: hidden;
+  padding: var(--bookmark_padding, var(--s-1));
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.notion_bookmark__title {
+  margin: 0 0 2px;
+  line-height: 1.25rem;
+  font-size: .875rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.notion_bookmark__description {
+  font-size: .75rem;
+  line-height: 1rem;
+  opacity: .7;
+  height: 2rem;
+  overflow: hidden;
+}
+.notion_bookmark__link {
+  display: flex;
+  align-items: center;
+  margin-top: 6px;
+}
+.notion_bookmark__link p {
+  margin: 0;
+  font-size: .75rem;
+  line-height: 1rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.notion_bookmark__cover {
+  flex: 1 1 180px;
+}
+.notion_bookmark__cover img {
+  display: block;
+  object-fit: cover;
+  border-radius: 0 var(--s-3, 3px) var(--s-3, 3px) 0;
+  width: 100%;
+  height: 100%;
 }
