--- a/src/styles/notion/block.css
+++ b/src/styles/notion/block.css
@@ -148,11 +148,12 @@
   max-width: 100%;
   display: flex;
   flex-wrap: wrap;
+  --column-gap: var(--s0);
   column-gap: var(--s0);
 }
 .notion_column_list > * {
   flex-grow: 1;
-  flex-basis: calc((var(--article-max-width) - 100%) * 999);
+  flex-basis: calc((var(--article-max-width) - var(--column-gap) - 100%) * 999);
 }
 .notion_column {
 }
@@ -199,6 +200,7 @@
 .notion_bookmark {
   border: 1px solid var(--color_border_default);
   border-radius: var(--s-3, 3px);
+  margin-top: var(--s-1);
 }
 .notion_bookmark > a {
   display: flex;
@@ -250,4 +252,8 @@
   height: 100%;
 }
 .notion_embed {
+}
+.notion_code > .notion_caption {
+  font-size: 0.8rem;
+  opacity: 0.7;
 }
