feat: 記事一覧の最低限のレイアウトを作成した

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,6 +3,7 @@
 @import "./colors.css";
 @import "./notion/page.css";
 @import "./notion/block.css";
+@import "./notion/collection.css";
 
 @tailwind base;
 @tailwind components;
