feat: Coverコンポーネントを作成した

--- a/src/styles/notion/page.css
+++ b/src/styles/notion/page.css
@@ -5,13 +5,13 @@
 }
 
 .notion_page_cover {
-  position: relative;
   display: flex;
   block-size: var(--page_cover_height);
-  inline-size: 100%;
 }
 
-.notion_page_cover_image {
+.notion_page_cover img {
+  block-size: auto;
+  inline-size: 100%;
   object-fit: var(--page_cover_image_object-fit, cover);
 }
 
