--- a/src/styles/notion/collection.css
+++ b/src/styles/notion/collection.css
@@ -14,28 +14,52 @@
   gap: var(--collection-card-gap);
 }
 .notion_collection_card {
-  width: 100%;
-  height: 100%;
-  transition: background 0.12s ease-in 0s;
-  position: relative;
-  cursor: pointer;
   overflow: hidden;
-  background: var(--color-card-bg);
-  padding: var(--collection-card-padding);
-  border-radius: var(--collection-card-border-radii, 5px);
-  box-shadow: var(
-    --collection-card-shadow,
-    rgba(15, 15, 15, 0.1) 0px 0px 0px 1px,
-    rgba(15, 15, 15, 0.1) 0px 2px 4px
-  );
+  border-radius: var(--s-3);
+  box-shadow: #00000020 0px 2px 4px 2px;
 }
 .notion_collection_card__cover {
-  /* min-height: 115px; */
-  /* height: 200px; */
-  width: 100%;
+  aspect-ratio: 16/9;
   overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .notion_collection_card__cover img {
-  aspect-ratio: 16/9;
+  inline-size: 100%;
+  block-size: 100%;
   object-fit: cover;
+}
+.notion_collection_card__content {
+  padding: var(--s-1);
+}
+.notion_collection_card .notion_property_item__title {
+  font-weight: 500;
+}
+.notion_collection_card .notion_icon {
+  display: inline-block;
+  width: var(--s0);
+  height: var(--s0);
+  aspect-ratio: 1;
+  margin-inline-end: 0.5rem;
+}
+.notion_collection_card .notion_icon.notion_icon__external {
+  vertical-align: text-top;
+}
+.notion_collection_card .notion_icon > img {
+  inline-size: 100%;
+  block-size: 100%;
+  object-fit: contain;
+}
+
+.notion_collection_card .notion_property_list {
+  margin-block-start: var(--s0);
+  font-size: 0.75rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.notion_collection_card .notion_property_list .notion_property_item {
+  display: flex;
+  align-items: center;
 }
