--- a/src/styles/notion/collection.css
+++ b/src/styles/notion/collection.css
@@ -34,6 +34,8 @@
   padding: var(--s-1);
 }
 .notion_collection_card .notion_property_item__title {
+  font-size: 0.9rem;
+  font-size: 1rem;
   font-weight: 500;
 }
 .notion_collection_card .notion_icon {
