--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -14,8 +14,11 @@
   --s5: calc(var(--s4) * var(--ratio));
   --s6: calc(var(--s5) * var(--ratio));
 
-  --font-sans: "Helvetica Neue", "Helvetica", "Hiragino Sans", "Hiragino Kaku Gothic ProN", "Arial", "Yu Gothic", "Meiryo", sans-serif;
-  --font-serif: "Times New Roman", "YuMincho", "Hiragino Mincho ProN", "Yu Mincho", "MS PMincho", serif;
+  /* https://ics.media/entry/200317/ */
+  --font-sans: "Helvetica Neue", "Arial", "Hiragino Kaku Gothic ProN",
+    "Hiragino Sans", "Meiryo", sans-serif;
+  --font-serif: "Times New Roman", "YuMincho", "Hiragino Mincho ProN",
+    "Yu Mincho", "MS PMincho", serif;
 
   --heading-size: var(--s0);
   --heading1-size: calc(var(--heading-size) * 1.875);
