--- a/src/styles/notion/collection.css
+++ b/src/styles/notion/collection.css
@@ -17,6 +17,12 @@
   overflow: hidden;
   border-radius: var(--s-3);
   box-shadow: #00000020 0px 2px 4px 2px;
+  position: relative;
+}
+.notion_collection_card__anchor {
+  position: absolute;
+  inset: 0;
+  z-index: 10;
 }
 .notion_collection_card__cover {
   aspect-ratio: 16/9;
@@ -56,7 +62,7 @@
 
 .notion_collection_card .notion_property_list {
   margin-block-start: var(--s0);
-  font-size: 0.75rem;
+  font-size: 0.9rem;
   overflow: hidden;
   text-overflow: ellipsis;
 }
