--- a/src/app/references/page.module.css
+++ b/src/app/references/page.module.css
@@ -1,5 +1,7 @@
 .references {
-  :global(.notion-gallery-card-cover) img {
-    object-fit: contain;
+  :global(.notion-gallery-card-cover) {
+    :global(.notion-cover) {
+      object-fit: contain;
+    }
   }
 }
