feat: hide gray_background

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,6 +26,10 @@
   max-width: 20em;
 }
 
+.notion-color-gray_background {
+  display: none !important;
+}
+
 @tailwind utilities;
 
 @layer base {
