--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,10 +7,7 @@
   --width: 65ch;
   --gap: 1rem;
   grid-template-columns:
-    [full-start] minmax(var(--gap), 1fr) [content-start] minmax(
-      auto,
-      var(--width)
-    )
+    [full-start] minmax(var(--gap), 1fr) [content-start] minmax(0, var(--width))
     [content-end] minmax(var(--gap), 1fr)
     [full-end];
 }
